fix: ensure headshots are consistent width on mobile

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -393,6 +393,12 @@ header.tg-page-header.tg-page-header--left-right {
 				text-transform: uppercase;
 				color: v.$gray;
 			}
+
+			@media screen and (max-width: 768px) {
+				figure {
+					width: 224px;
+				}
+			}
 		}
 	}
 
